--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@
   box-sizing: border-box;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Mulish", sans-serif;
+  font-style: 16px;
+  font-weight: 400;
 }
 .header {
   padding: 20px 70px 20px 32px;
   display: flex;
   align-items: center;
+  margin-bottom: 30px;
 }
 .menu__button {
   margin-right: 28px;
@@ -48,6 +51,7 @@ body {
   border-radius: 22px;
   padding: 12px 23px;
   outline: none;
+  width: 100%;
 }
 .search__button_search {
   padding: 0;
@@ -80,4 +84,47 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+}
+.sidebar {
+  padding-left: 32px;
+}
+.navigation__menu {
+  margin-top: 0;
+  margin-bottom: 60px;
+  padding-left: 0;
+  list-style: none;
+}
+.navigation__item {
+  margin-bottom: 28px;
+  color: #898989;
+}
+.navigation__item .icon {
+  fill: #898989;
+}
+.navigation_link {
+  display: flex;
+  align-items: center;
+  color: #898989;
+  text-decoration: none;
+}
+.navigation_link:hover {
+  color: #ff0000;
+}
+.navigation_link:hover .icon {
+  fill: #ff0000;
+}
+.navigation__text {
+  margin-left: 13px;
+}
+.navigation_image {
+  width: 26px;
+  height: 26px;
+  border-radius: 50px;
+}
+.navigation__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-bottom: 30px;
 }
